--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,11 +3,11 @@ name: Tests
 on:
   push:
     branches:
-      - master
+      - main
       - staged
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   Core:
